--- a/electro.html
+++ b/electro.html
@@ -13,7 +13,16 @@
     <p>
         <b>An electronic gadget is a device that utilizes electronic components and circuits to perform a specific function. Electronic gadgets can include a wide range of devices, from small handheld devices like smartphones and tablets to larger devices like computers, televisions, and home appliances.</b>
     </p>
-    
+    <hr/>
+    <b>list of electronic atom </b>
+
+    <ul>
+        <li> Digital Watches. </li>
+        <li>    Robots. </li>
+        <li>    Mobile Phones</li>.
+        <li>    Computers</li>
+        <li>    tablets</li>
+    </ul>
     
 
 </body>
