number and mail added

--- a/electro.html
+++ b/electro.html
@@ -14,16 +14,17 @@
         <b>An electronic gadget is a device that utilizes electronic components and circuits to perform a specific function. Electronic gadgets can include a wide range of devices, from small handheld devices like smartphones and tablets to larger devices like computers, televisions, and home appliances.</b>
     </p>
     <hr/>
-    <b>list of electronic atom </b>
+    <b style="background-color: rgb(106, 223, 96);">list of electronic atom </b>
 
     <ul>
         <li> Digital Watches. </li>
         <li>    Robots. </li>
-        <li>    Mobile Phones</li>.
+        <li>    Mobile Phones</li>
         <li>    Computers</li>
         <li>    tablets</li>
     </ul>
-    
+    To know more about us 
+    <a href="about.html"> Click me! </a>..
 
 </body>
 
